changes to sql code to make it work on ssms

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -18,6 +18,7 @@ clean-targets:
 
 models:
   jaffle_shop:
+      +as_columnstore: False
       materialized: table
       staging:
         materialized: view
