add timestamp column

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -21,3 +21,9 @@ models:
       materialized: table
       staging:
         materialized: view
+
+seeds:
+  jaffle_shop:
+    raw_customers:
+      +column_types:
+        created: timestamp
