--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -4,16 +4,16 @@ version: '0.1'
 profile: 'jaffle_shop'
 config-version: 2
 
-source-paths: ["models"]
-analysis-paths: ["analysis"]
+model-paths: ["models"]
+analysis-paths: ["analyses"]
 test-paths: ["tests"]
-data-paths: ["data"]
+seed-paths: ["seeds"]
 macro-paths: ["macros"]
 
 target-path: "target"
 clean-targets:
     - "target"
-    - "dbt_modules"
+    - "dbt_packages"
     - "logs"
 
 models:
