--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -3,6 +3,7 @@ name: 'jaffle_shop'
 version: '0.1'
 profile: 'jaffle_shop'
 config-version: 2
+require-dbt-version: ">=1.0.0"
 
 model-paths: ["models"]
 analysis-paths: ["analyses"]
