until this is fixed: https://github.com/firebolt-analytics/dbt-firebolt/issues/67

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -21,3 +21,8 @@ models:
       materialized: table
       staging:
         materialized: table
+
+seeds:
+  jaffle_shop:
+    +column_types:
+      order_date: TEXT
