--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -28,5 +28,8 @@ models:
 
 seeds:
   jaffle_shop:
-    +column_types:
-      order_date: TEXT
+    +pre-hook: "set firebolt_dont_wait_for_upload_to_s3=1" # WARNING: alpha feature
+    +quote_columns: true
+    raw_orders:
+      +column_types:
+        order_date: TEXT
