Updated version number of external tables and renamed fields in dbt_project.yml.

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -4,10 +4,10 @@ version: '0.1'
 profile: 'jaffle_shop'
 config-version: 2
 
-source-paths: ["models"]
+model-paths: ["models"]
 analysis-paths: ["analysis"]
 test-paths: ["tests"]
-data-paths: ["data"]
+seed-paths: ["data"]
 macro-paths: ["macros"]
 
 target-path: "target"
@@ -29,7 +29,7 @@ models:
 seeds:
   +quote_columns: true
   jaffle_shop:
-    +pre-hook: "set firebolt_dont_wait_for_upload_to_s3=1" # WARNING: alpha feature
+#    +pre-hook: "set firebolt_dont_wait_for_upload_to_s3=1" # WARNING: alpha feature
     +quote_columns: true
     raw_orders:
       +column_types:
