--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -4,10 +4,10 @@ version: '0.1'
 profile: 'jaffle_shop'
 config-version: 2
 
-source-paths: ["models"]
+model-paths: ["models"]
 analysis-paths: ["analysis"]
 test-paths: ["tests"]
-data-paths: ["data"]
+seed-paths: ["seeds"]
 macro-paths: ["macros"]
 
 target-path: "target"
