--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,13 +1,14 @@
-
 name: 'jaffle_shop'
-version: '0.1'
-profile: 'jaffle_shop'
+
 config-version: 2
+version: '0.1'
+
+profile: 'jaffle_shop'
 
 model-paths: ["models"]
-analysis-paths: ["analysis"]
-test-paths: ["tests"]
 seed-paths: ["seeds"]
+test-paths: ["tests"]
+analysis-paths: ["analysis"]
 macro-paths: ["macros"]
 
 target-path: "target"
@@ -15,6 +16,8 @@ clean-targets:
     - "target"
     - "dbt_modules"
     - "logs"
+
+require-dbt-version: [">=1.0.0", "<2.0.0"]
 
 models:
   jaffle_shop:
