--- a/profiles.yml
+++ b/profiles.yml
@@ -1,17 +1,9 @@
-jaffle_shop:
+default:
   target: dev
   outputs:
     dev:
-      type: snowflake
-      account: zna84829
-
-      # User/password auth
-      user: sung_c
-      password: "{{ env_var('SFPASS') }}"
-
-      database: SUNG_DEMO
-      warehouse: TRANSFORMING
+      type: databricks
       schema: dbt_sung
-      threads: 16
-      client_session_keep_alive: True
-      query_tag:
+      host: dbc-c7c89cba-cf9b.cloud.databricks.com
+      http_path: /sql/1.0/endpoints/07bb14a8596beb78
+      token: "{{ env_var('TOKEN') }}" # Personal Access Token (PAT)
