--- a/profiles.yml
+++ b/profiles.yml
@@ -7,3 +7,4 @@ default:
       host: dbc-c7c89cba-cf9b.cloud.databricks.com
       http_path: /sql/1.0/endpoints/07bb14a8596beb78
       token: "{{ env_var('TOKEN') }}" # Personal Access Token (PAT)
+      threads: 16
