--- a/bigquery/dbt_project.yml
+++ b/bigquery/dbt_project.yml
@@ -3,7 +3,7 @@ name: 'jaffle_shop'
 config-version: 2
 version: '0.1'
 
-profile: 'jaffle_shop'
+profile: 'bigquery'
 
 model-paths: ["models"]
 seed-paths: ["seeds"]
