--- a/data/seeds.yml
+++ b/data/seeds.yml
@@ -4,6 +4,6 @@ seeds:
   - name: raw_events
     config:
       column_types:
-        timezone_tz: "{{ 'timestamp_tz' if target.type == 'snowflake' else 'timestamp' }}"
-        timezone_ltz: "{{ 'timestamp_ltz' if target.type == 'snowflake' else 'timestamp' }}"
-        timezone_ntz: "{{ 'timestamp_ntz' if target.type == 'snowflake' else 'timestamp' }}"
+        timestamp_tz: "{{ 'timestamp_tz' if target.type == 'snowflake' else 'timestamp' }}"
+        timestamp_ltz: "{{ 'timestamp_ltz' if target.type == 'snowflake' else 'timestamp' }}"
+        timestamp_ntz: "{{ 'timestamp_ntz' if target.type == 'snowflake' else 'timestamp' }}"
