--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -3,12 +3,12 @@ name: 'jaffle_shop'
 config-version: 2
 version: '0.1'
 
-profile: 'jaffle_shop'
+profile: 'snowflake'
 
 model-paths: ["models"]
 seed-paths: ["seeds"]
 test-paths: ["tests"]
-analysis-paths: ["analysis"]
+analysis-paths: ["analyses"]
 macro-paths: ["macros"]
 
 target-path: "target"
