--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,27 +1,27 @@
-
-name: 'jaffle_shop'
+name: jaffle_shop
 version: '0.1'
-profile: 'jaffle_shop'
+profile: jaffle_shop
 config-version: 2
-
-model-paths: ["models"]
-analysis-paths: ["analysis"]
-test-paths: ["tests"]
-seed-paths: ["data"]
-macro-paths: ["macros"]
-
-target-path: "target"
+model-paths:
+  - models
+analysis-paths:
+  - analysis
+test-paths:
+  - tests
+seed-paths:
+  - data
+macro-paths:
+  - macros
+target-path: target
 clean-targets:
-    - "target"
-    - "dbt_modules"
-    - "logs"
-
+  - target
+  - dbt_modules
+  - logs
 models:
   jaffle_shop:
-      materialized: table
-      staging:
-        materialized: view
-
+    materialized: table
+    staging:
+      materialized: view
 seeds:
   jaffle_shop:
     raw_customers:
