--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -21,6 +21,7 @@ require-dbt-version: [">=1.0.0", "<2.0.0"]
 
 models:
   jaffle_shop:
-      materialized: table
-      staging:
-        materialized: view
+    marts:
+      +materialized: table
+    staging:
+      +materialized: view
