--- a/.github/workflows/test_dbt.yml
+++ b/.github/workflows/test_dbt.yml
@@ -26,13 +26,7 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Setup DB
       run: |
-        docker-compose up &
-
-    - name: Wait for setup to finish
-      run: |
-        until [ "`docker inspect -f {{.State.Running}} postgres`"=="true" ]; do
-            sleep 0.1;
-        done;
+        docker-compose up --detach
 
     - name: Run dbt
       run: |
