--- a/profiles.yml
+++ b/profiles.yml
@@ -11,4 +11,13 @@ jaffle_shop:
       schema: dbt_sung
       threads: 24
       connect_timeout: 10 # default 10 seconds
-
+    prod:
+      type: postgres
+      host: db.bit.io
+      user: sungwonchung3
+      password: "{{ env_var('DB_PASS') }}"
+      port: 5432
+      dbname: sungwonchung3/constraints
+      schema: dbt_sung_prod
+      threads: 24
+      connect_timeout: 10 # default 10 seconds
