Commit updates from running kos enhancement script

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -24,3 +24,13 @@ models:
       materialized: table
       staging:
         materialized: view
+  +meta:
+    all-models: "all models meta"
+
+seeds:
+  +meta:
+    all-seeds: "all seeds meta"
+
+tests:
+  +meta:
+    all-tests: "all tests meta"
