Update CI workflow with piperider cli v0.20.0 command
Signed-off-by: Wei-Chun, Chang <wcchang@infuseai.io>

--- a/.github/workflows/production-daily-job-slim-ci.yml
+++ b/.github/workflows/production-daily-job-slim-ci.yml
@@ -48,7 +48,7 @@ jobs:
         echo "run_id=$(cat response.json | jq -r '.data.id')" >> $GITHUB_ENV
 
     - name: Piperider Cloud Login
-      run: piperider cloud login --token $PIPERIDER_CLOUD_TOKEN_ID --disable-auto-upload
+      run: piperider cloud login --token $PIPERIDER_CLOUD_TOKEN_ID
 
     - name: Profile on PROD environment
       run: |
