--- a/profiles.yml
+++ b/profiles.yml
@@ -1,7 +1,20 @@
 jaffle_shop:
-  target: prod
+  target: dev
   outputs:
-    pr:
+    dev:
+      type: snowflake
+      account: "{{ env_var('SNOWFLAKE_ACCOUNT') | as_text }}"
+
+      # User/password auth
+      user: "{{ env_var('SNOWFLAKE_USER') | as_text }}"
+      password: "{{ env_var('SNOWFLAKE_PASSWORD') | as_text }}"
+
+      role: "{{ env_var('SNOWFLAKE_ROLE') | as_text }}"
+      database: "{{ env_var('SNOWFLAKE_DATABASE') | as_text }}"
+      warehouse: "{{ env_var('SNOWFLAKE_WAREHOUSE') | as_text }}"
+      schema: PUBLIC
+      threads: 4  
+    jaffle_shop_pr:
       type: snowflake
       account: "{{ env_var('SNOWFLAKE_ACCOUNT') | as_text }}"
 
@@ -14,7 +27,7 @@ jaffle_shop:
       warehouse: "{{ env_var('SNOWFLAKE_WAREHOUSE') | as_text }}"
       schema: "{{ env_var('SNOWFLAKE_SCHEMA') | as_text }}"
       threads: 4
-    prod:
+    jaffle_shop:
       type: snowflake
       account: "{{ env_var('SNOWFLAKE_ACCOUNT') | as_text }}"
 
