--- a/.github/workflows/uat.yml
+++ b/.github/workflows/uat.yml
@@ -26,11 +26,7 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Run dbt
+        uses: molar-volume/dbt-snowflake@main
+        with:
+          command: dbt run
