--- a/.github/workflows/uat.yml
+++ b/.github/workflows/uat.yml
@@ -9,6 +9,7 @@ on:
     branches: [ "main" ]
     paths:
       - 'dbt/**'
+      - '.github/workflows/uat.yml'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
