--- a/.github/workflows/uat.yml
+++ b/.github/workflows/uat.yml
@@ -20,7 +20,8 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    working-directory: dbt
+    defaults:
+      working-directory: dbt
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
