--- a/.github/workflows/uat.yml
+++ b/.github/workflows/uat.yml
@@ -20,6 +20,9 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: dbt
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -31,4 +34,3 @@ jobs:
         uses: molar-volume/dbt-snowflake@main
         with:
           command: dbt run
-        working-directory: dbt
